<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:id="@+id/iv_back"
            android:src="@drawable/ic_action_hardware_keyboard_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_server"
            android:layout_centerInParent="true"
            android:textSize="@dimen/ts_big" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_padding"
        android:layout_below="@id/toolbar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="@dimen/ts_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/main_padding"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hint_user_count"
                android:textSize="@dimen/ts_normal" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_count"
                android:layout_width="@dimen/bottom_bar_height"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/main_padding"
            android:padding="5dp"
            android:id="@+id/rl_private">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hint_private"
                android:textSize="@dimen/ts_normal" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:id="@+id/cb_private"
                android:clickable="false" />


        </RelativeLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="@dimen/main_padding"
            android:visibility="gone"
            android:textSize="@dimen/ts_normal"

            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_create"
        android:id="@+id/btn_create" />


</RelativeLayout>